# tutorial_acts_june25

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TreeReader.h  alice3-smearing-config.json  alice3.py  alice3_full_chain.py  alice3_geom_oct24.py  alice3_iris4_v40.py  alice3_iris_segm_june25_v40.py  full_chain_Jan_2026_v2.py  full_chain_alice3_tutorial.py  full_chain_alice3_tutorial_g4.py  geom  getPtResolution.C  run_pT_scan.py  setup.sh
.github/workflows/: geo_build_materialmap.yml  run_test.yml
ActsAlgorithms/: CMakeLists.txt
ActsAlgorithms/ExampleAlgorithms/: CMakeLists.txt
ActsAlgorithms/ExampleAlgorithms/include/: ExampleAlgorithm.hpp  HitRemoverAlgorithm.hpp  TrackMergerAlgorithm.hpp  TrackTruthMatcher.hpp
ActsAlgorithms/ExampleAlgorithms/src/: ExampleAlgorithm.cpp  HitRemoverAlgorithm.cpp  TrackMergerAlgorithm.cpp  TrackTruthMatcher.cpp
ActsAlgorithms/Validation/: CMakeLists.txt
ActsAlgorithms/Validation/include/: ResPlotTool.hpp  RootTrackFitterPerformanceWriter.hpp
ActsAlgorithms/Validation/src/: ResPlotTool.cpp  RootTrackFitterPerformanceWriter.cpp
ActsAlgorithms/python/: CMakeLists.txt
ActsAlgorithms/python/src/: AliceActsAlgorithmsModule.cpp  ExampleAlgorithmBindings.hpp
Examples/Scripts/: runExampleAlgorithm.py
alice3/: alice3_detector_withTOF.py  alice3_detector_woTOF_Iris.py  alice3_geometry.py  alice3_material_recording.py
alice3/performance/: generator.py  plotting.py  seeding.py  simulation.py  writers.py
cmake/: ExternSources.cmake
fieldmaps/: 1T_7.5m_solenoid_1m_free_bore.txt  2T_7.5m_solenoid_1m_free_bore.txt  solenoid_R1625_L5500_B2T_scaled.txt  solenoid_R1625_L6500_B2T_scaled.txt  solenoid_R1625_L7500_B2T_scaled.txt
geom/geom_oct24/: o2sim_geometry.gdml  o2sim_geometry.root
geom/iris_segm_june25/: o2sim_geometry.gdml  o2sim_geometry.root
job_configs/: ChainConfig.py
macros/: getPtResolution.C
old_geom/geom_dec25/: convert_gdml_to_root.py  o2sim_geometry.gdml  o2sim_geometry.root
old_geom/iris4/: o2sim_geometry.gdml  o2sim_geometry.root
seedingGeoSelections/: geoSelectionForSeeding_3firstML.json  geoSelectionForSeeding_5ML.json  geoSelectionForSeeding_VD.json
utils/: convert_gdml_to_root.py
